--- a/.i3/config
+++ b/.i3/config
@@ -151,6 +151,7 @@ set $ws6 6:6
 set $ws7 7:7
 set $ws8 8:8
 
+# Workspace outputs
 workspace "$ws1" output "DP-0"
 workspace "$ws2" output "DP-2"
 workspace "$ws3" output "DP-0"
@@ -189,6 +190,8 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 # Open applications on specific workspaces
 assign [class="Thunderbird"] $ws5
 assign [title="Chromium"] $ws2
+assign [class="code-oss"] $ws3
+assign [class="jetbrains-pycharm"] $ws3
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
@@ -217,6 +220,8 @@ for_window [class="Skype"] floating enable border normal
 for_window [class="Timeset-gui"] floating enable border normal
 for_window [class="(?i)virtualbox"] floating enable border normal
 for_window [class="Xfburn"] floating enable
+
+# Open specific applications with non-tiling layout
 for_window [title="Chromium*"] layout tabbed
 
 # switch to workspace with urgent window automatically
@@ -371,6 +376,9 @@ bindsym $mod+m bar mode toggle
 # Set inner/outer gaps
 gaps inner 14
 gaps outer -2
+
+workspace "$ws1" gaps inner 30
+workspace "$ws2" gaps inner 0
 
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
 # gaps inner|outer current|all set|plus|minus <px>
