--- a/.i3/config
+++ b/.i3/config
@@ -143,13 +143,13 @@ bindsym $mod+Ctrl+Left workspace prev
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
 set $ws1 1:1 
-set $ws2 2:2 
+set $ws2 2:2 
 set $ws3 3:3 
-set $ws4 4:4
+set $ws4 4:4 
 set $ws5 5:5  
-set $ws6 6:6
-set $ws7 7:7
-set $ws8 8:8
+set $ws6 6:6 
+set $ws7 7:7 
+set $ws8 8:8 
 
 # Workspace outputs
 workspace "$ws1" output "DP-0"
@@ -379,6 +379,7 @@ gaps outer -2
 
 workspace "$ws1" gaps inner 30
 workspace "$ws2" gaps inner 0
+workspace "$ws2" gaps outer 5
 
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
 # gaps inner|outer current|all set|plus|minus <px>
@@ -436,4 +437,7 @@ exec_always "setxkbmap -model pc105 -layout gb,fi -variant ,nodeadkeys -option g
 exec chromium
 exec thunderbird
 
+bindsym $mod+comma exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym $mod+period exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym $mod+slash exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
