--- a/.i3/config
+++ b/.i3/config
@@ -189,7 +189,6 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
 assign [class="Thunderbird"] $ws5
-assign [class="Brave-browser"] $ws2
 assign [class="code-oss"] $ws3
 assign [class="jetbrains-pycharm"] $ws3
 
@@ -436,7 +435,7 @@ mode "$mode_gaps_outer" {
 # Manually configured Autostart
 #
 exec_always "setxkbmap -model pc105 -layout gb,fi -variant ,nodeadkeys -option grp:alt_shift_toggle"
-exec brave
+exec --no-startup-id i3-msg "workspace 2:2 ; exec brave"
 exec thunderbird
 
 bindsym $mod+comma exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
