--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -27,6 +27,7 @@
 command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
+BLOCKLETS_DIR=~/.i3/blocklets
 
 [keymap]
 label=
@@ -40,4 +41,9 @@ interval=persist
 label=
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
+
+[battery2]
+command="${BLOCKLETS_DIR}/battery2"
+markup=pango
+interval=30
 
